# python_fastapi_template

./: Makefile  README.md  pyproject.toml  setup.cfg
app/: __init__.py  __main__.py
app/config/: __init__.py  default.py
app/db/: __init__.py
app/db/migrator/: env.py
app/db/models/: __init__.py
app/endpoints/: __init__.py
app/schemas/: __init__.py
app/utils/: __init__.py  get_settings.py
tests/: conftest.py
tests/test_migrations/: test_stairway.py
